[package]
name = "quicfs"
description = "FUSE filesystem for interactive remote mounting"
version = "0.1.0"
edition = "2021"
authors = ["Jack O'Sullivan <j@ckos.ie>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
fuser = { version = "0.14", optional = true }
libc = { version = "0.2", optional = true }
log = "0.4"
prost = "0.13"
quinn = "0.11"
rcgen = "0.13"
signal-hook = "0.3"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
prost-build = "0.13"

[features]
default = ["client"]
client = ["dep:libc", "dep:fuser"]

[[bin]]
name = "quicfs"
path = "src/client/main.rs"
required-features = ["client"]
